--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,7 @@ body {
     background-attachment: fixed;
     background-blend-mode: overlay;
     min-height: 100vh;
-    overflow-x: hidden;                 /* Take away the horizontal scrollbar */
-}
+    overflow-x: hidden;                 
 
 .background {
 
